Rename API table + bug fixes in admin site and university theme Imported from Changeset 2557

--- a/WMS/Views/Theme/Default/Products/_EditableProductGrid.cshtml
+++ b/WMS/Views/Theme/Default/Products/_EditableProductGrid.cshtml
@@ -2,7 +2,7 @@
     var grid = Html.DevExpress().GridView(settings =>
     {
         settings.Name = "ProductEditListGridView";
-        settings.CallbackRouteValues = new { Controller = "Products", Action = "_EditableProductGrid", AssociatedItem = ViewBag.AssociatedItem, KitType= ViewBag.KitTypes };
+        settings.CallbackRouteValues = new { Controller = "Products", Action = "_EditableProductGrid", AssociatedItem = ViewBag.AssociatedItem, KitType = ViewBag.KitTypes };
 
         settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
         settings.SettingsEditing.Mode = GridViewEditingMode.Batch;
@@ -157,6 +157,7 @@
                 c.Settings.AutoFilterCondition = AutoFilterCondition.Contains;
                 c.EditFormSettings.Visible = DefaultBoolean.False;
             });
+
             if (ViewBag.KitTypes != Ganedata.Core.Entities.Enums.ProductKitTypeEnum.Grouped)
             {
                 settings.Columns.Add(c =>
@@ -191,7 +192,32 @@
 
                 });
             }
-            settings.Columns.Add(c =>
+
+    //if (ViewBag.KitTypes == Ganedata.Core.Entities.Enums.ProductKitTypeEnum.ProductByAttribute)
+    //{
+
+    settings.Columns.Add(column =>
+            {
+                column.Caption = "Attributes";
+                column.Name = "AttributeValues";
+
+                column.SetDataItemTemplateContent(container =>
+                {
+                    List<string> type = DataBinder.Eval(container.DataItem, "AttributeValueNames") as List<string>;
+
+                    if (type != null && type.Count() > 0)
+                    {
+                        var data = string.Join(", ", type);
+                        ViewContext.Writer.Write(data);
+
+                    }
+
+                });
+            });
+
+    //}
+
+    settings.Columns.Add(c =>
             {
                 c.FieldName = "IsActive";
                 c.Caption = "Active";
@@ -209,6 +235,7 @@
             settings.ClientSideEvents.EndCallback = "OnEndGridCallback";
 
         }
+
 
         settings.SettingsPager.PageSizeItemSettings.Visible = true;
         settings.SettingsPager.PageSizeItemSettings.Items = new string[] { "10", "20", "50" };
