--- a/WarehouseEcommerce/Views/Theme/University/Shared/_SubscribePartial.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Shared/_SubscribePartial.cshtml
@@ -12,10 +12,10 @@
                         Subscribe to receive updates on new arrivals, special offers and
                         other discount information.
                     </p>
-                    <form class="nb_home_sub_form" action="">
+                    <form action="https://creativeemporium.us20.list-manage.com/subscribe/post?u=45234bb31d569c892a76ab5de&amp;id=e5a3e5c974" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate nb_home_sub_form" target="_blank" novalidate>
                         <div class="sf_input_wrap">
-                            <input type="text" placeholder="Enter your mail Id" />
-                            <button type="submit">
+                            <input type="email" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="Enter your mail Id" />
+                            <button type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button">
                                 <i class="ico icon-right-arrow"></i>
                             </button>
                         </div>
@@ -25,4 +25,6 @@
         </div>
     </div>
 </section>
+<script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script>
+<script type='text/javascript'>(function ($) { window.fnames = new Array(); window.ftypes = new Array(); fnames[0] = 'EMAIL'; ftypes[0] = 'email'; fnames[1] = 'FNAME'; ftypes[1] = 'text'; fnames[2] = 'LNAME'; ftypes[2] = 'text'; fnames[3] = 'ADDRESS'; ftypes[3] = 'address'; fnames[4] = 'PHONE'; ftypes[4] = 'phone'; }(jQuery)); var $mcj = jQuery.noConflict(true);</script>
 <!-- subscribe section -->
