--- a/WarehouseEcommerce/Views/Theme/University/Shared/_TopHeaderPartial.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Shared/_TopHeaderPartial.cshtml
@@ -18,6 +18,7 @@
                 <label class="sr-only" for="searchinput">Name</label>
                 <input type="search" class="form-control search_input text-search" id="searchinput" placeholder="Search Here" />
                 <button type="button" id="serchBtnico" class="btn btn-primary search_btn" onclick="SearchProductCategory();"><i class="icon-search"></i></button>
+                <button type="button" id="serchBtnClose" class="btn btn-primary search_btn">X</i></button>
             </form>
         </div>
         <div class="nb_logowrap">
