--- a/WMS/Views/Theme/Default/Shared/_Layout-no-header-left.cshtml
+++ b/WMS/Views/Theme/Default/Shared/_Layout-no-header-left.cshtml
@@ -5,6 +5,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="robots" content="noindex, nofollow, noimageindex">
     <link rel="shortcut icon" type="image/x-icon" href="~/Content/images/WZ_favicon.ico" />
     <title>@ViewBag.Title</title>
 
