--- a/WMS/Views/Theme/Default/UISettings/SettingsBar.cshtml
+++ b/WMS/Views/Theme/Default/UISettings/SettingsBar.cshtml
@@ -19,13 +19,14 @@
                 @Html.HiddenFor(m => m[i].Id)
                 @Html.HiddenFor(m => m[i].UISettingItem.Id)
                 @Html.HiddenFor(m => m[i].UISettingItem.Key)
+                @Html.HiddenFor(m => m[i].UISettingItem.DefaultValue)
 
                 <label class="col-md-7 float-left">@Model[i].UISettingItem.DisplayName</label>
                 <div class="col-md-5 float-left">
                     @Html.TextBoxFor(m => m[i].Value, new { @type = (Model[i].UISettingItem.InputType == UISettingItemInputType.Color ? "Text" : Enum.GetName(typeof(UISettingItemInputType), Model[i].UISettingItem.InputType)),
                                                             @class = Model[i].UISettingItem.InputType == UISettingItemInputType.Color ? "jscolor {hash:true, padding:4} form-control" : "form-control",
                                                             @onchange = "onUISettingChanged(this)",
-                                                            @settingsKey = Model[i].UISettingItem.Key})
+                                                            data_settingsKey = Model[i].UISettingItem.Key})
                 </div>
 
                 @Html.ValidationMessageFor(model => model[i].Value, "The " + Model[i].UISettingItem.DisplayName + " field value is required.", new { @class = "col-md-12 text-danger" })
@@ -34,8 +35,8 @@
 
 <div class="settings-bar-buttons">
     <input type="button" onclick='saveUISettings();' value="Save" class="btn btn-primary" />
-    <input type="button" value="Default" onclick="resetUISettings();" class="btn btn-default" />
-    <input type="button" value="Cancel" onclick="undoUISettings();" class="btn btn-default" />
+    <input type="button" value="Default" onclick="setDefaultValues();" class="btn btn-default" />
+    <input type="button" value="Cancel" onclick="cancelChanges();" class="btn btn-default" />
 </div>
     }
 }
