--- a/WarehouseEcommerce/Views/Theme/Smart/Shared/_Layout.cshtml
+++ b/WarehouseEcommerce/Views/Theme/Smart/Shared/_Layout.cshtml
@@ -14,13 +14,12 @@
     <link href="~/Content/magnific-popup/dist/magnific-popup.css" type="text/css" rel="stylesheet" media="screen" />
     @Styles.Render("~/Content/css")
     @Styles.Render("~/Content/Theme/Smart/app/css/smart")
+    <link href="@Url.Action("AppStyle", "UISettings", new { filePath = "/Content/Theme/Smart/app/css/App.css"})" rel="stylesheet" type="text/css" />
 
     @Scripts.Render("~/bundles/modernizr")
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/jqueryval")
     @Scripts.Render("~/bundles/unobtrusive")
-
-    <script src="~/Scripts/Gane.UISettings.js"></script>
 
     @Scripts.Render("~/bundles/bootstrap")
     <script src="~/Scripts/jquery-ui-1.12.1.min.js"></script>
