--- a/WMS/Content/Theme/Default/Site.css
+++ b/WMS/Content/Theme/Default/Site.css
@@ -141,7 +141,6 @@ label {
 }
 
 .btnadd {
-    background-image: url('images/Add.png' );
     width: 24px;
     height: 24px;
 }
@@ -157,7 +156,6 @@ label {
     }
 
 th.header {
-    background-image: url(images/bg.gif);
     cursor: pointer;
     font-weight: bold;
     background-repeat: no-repeat;
@@ -169,12 +167,10 @@ th.header {
 }
 
 th.headerSortUp {
-    background-image: url(images/asc.gif);
     background-color: #3399FF;
 }
 
 th.headerSortDown {
-    background-image: url(images/desc.gif);
     background-color: #3399FF;
 }
 
@@ -214,7 +210,6 @@ h4, .h4 {
 }
 
 .fixed-bottom {
-    background-image: url(images/footer-bg.png);
     border-color: black;
     min-height: 51px;
 }
@@ -238,7 +233,7 @@ h4, .h4 {
     padding-bottom: 70px;
     width: 15%;
     border-top: none;
-    background-color: #005ca0;
+    background-color: var(--sidebar-background-color);
     border-right: 4px inset #316c8e;
     overflow: hidden;
     overflow-y: auto;
@@ -248,10 +243,6 @@ h4, .h4 {
         margin-bottom: 0px;
         margin-top: 0px;
     }
-
-.side-nav {
-    background-color: var(--sidebar-background-color) !important;
-}
 
 .pre-scrollable {
     max-height: inherit;
@@ -587,7 +578,6 @@ footer p {
     width: 100%;
     height: 100%;
     z-index: 9999;
-    background: url(../../images/loading.gif) center no-repeat;
     background-color: rgba(255, 255, 255, 0.5);
 }
 
