--- a/WMS/Views/Theme/Default/UISettings/WebsiteUISettings.cshtml
+++ b/WMS/Views/Theme/Default/UISettings/WebsiteUISettings.cshtml
@@ -16,7 +16,7 @@
 
 <h2><span>Website UI Customization (@ViewBag.SiteName)</span></h2>
 
-@using (Html.BeginForm())
+@using (Html.BeginForm(null, null, FormMethod.Post, new { id = "websiteUISettings" }))
 {
     @Html.AntiForgeryToken()
     if (Model.Count() == 0)
@@ -32,6 +32,7 @@
                 @Html.HiddenFor(m => m[i].SiteId)
                 @Html.HiddenFor(m => m[i].UISettingItem.Id)
                 @Html.HiddenFor(m => m[i].UISettingItem.Key)
+                @Html.HiddenFor(m => m[i].UISettingItem.DefaultValue)
 
                 <label class="col-md-8 float-left form-check-label">@Model[i].UISettingItem.DisplayName</label>
                 <div class="col-md-4 float-left">
