--- a/WarehouseEcommerce/Views/Theme/University/Shared/_Layout.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Shared/_Layout.cshtml
@@ -13,6 +13,7 @@
     <link rel="icon" href="~/Content/Theme/University/app/images/favico.ico" />
     <link href="~/Content/Theme/University/app/css/owl.carousel.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="~/Content/Theme/University/app/css/jquery-confirm.min.css">
+    <link href="@Url.Action("AppStyle", "UISettings", new { filePath = "/Content/Theme/University/app/css/App.css"})" rel="stylesheet" type="text/css" />
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/jqueryval")
@@ -20,8 +21,6 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
             integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
             crossorigin="anonymous"></script>
-
-    <script src="~/Scripts/Gane.UISettings.js"></script>
 
     @Scripts.Render("~/bundles/bootstrap")
 
