--- a/WarehouseEcommerce/Views/Theme/University/Shared/_TopHeaderPartial.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Shared/_TopHeaderPartial.cshtml
@@ -6,27 +6,26 @@
     <div class="res_navWrapper">
         <span class="nb_res_nav_closeTrigger">X</span>
         <span class="nb_logowrap_res">
-
             <img src="@ViewBag.BaseFilePath@siteProperties.Logo" title="@siteProperties.SiteName" alt="@siteProperties.SiteName" />
         </span>
         <div class="nb_firstNav_res_lst_wrap"></div>
         <button class="nb_lgn_btn_res">Login</button>
     </div>
-    <div class="container">
+    <div class="container head-container">
         <div class="search_wrap_main">
             <form class="form-inline">
                 <label class="sr-only" for="searchinput">Name</label>
                 <input type="search" class="form-control search_input text-search" id="searchinput" placeholder="Search Here" />
-                <button type="button" id="serchBtnico" class="btn btn-primary search_btn" onclick="SearchProductCategory();"><i class="icon-search"></i></button>
-                <button type="button" id="serchBtnClose" class="btn btn-primary search_btn">X</i></button>
+                <span>
+                    <button type="button" id="serchBtnClose" class="btn btn-primary search_btn">X</i></button>
+                    <button type="button" id="serchBtnico" class="btn btn-primary search_btn" onclick="SearchProductCategory();"><i class="icon-search"></i></button>
+                </span>
             </form>
         </div>
         <div class="nb_logowrap">
-            @*<a href="index.html">
-                    <img src="~/Content/Theme/University/app/images/logo.png" alt="" />
-                </a>*@
             <a href="@Url.Action("Index","Home")">
                 <img src="@ViewBag.BaseFilePath@siteProperties.Logo" title="@siteProperties.SiteName" alt="@siteProperties.SiteName" style="max-height:224px;" />
+                @*<img src="~/Content/Theme/University/app/images/logo.png" title="static logo" alt="static logo" />*@
             </a>
         </div>
         <ul class="nb_headicolst">
